--- a/Company.G01.PL/Views/Department/Create.cshtml
+++ b/Company.G01.PL/Views/Department/Create.cshtml
@@ -20,14 +20,14 @@
     <div class="my-3">
         <label asp-for="Name" class="col-form-lable"></label>
         <input asp-for="Name" class="form-control " />
-        <span asp-validation-for="Name"></span>
+        <span asp-validation-for="Name" class="text-danger"></span>
 
     </div>
 
     <div class="my-3">
         <label asp-for="CreateAt" class="col-form-lable"></label>
         <input asp-for="CreateAt" class="form-control " />
-        <span asp-validation-for="CreateAt"></span>
+        <span asp-validation-for="CreateAt" class="text-danger"></span>
 
     </div>
 
