--- a/Company.G01.PL/Views/Department/Index.cshtml
+++ b/Company.G01.PL/Views/Department/Index.cshtml
@@ -18,6 +18,7 @@
     <table class="table table-hover table-striped">
         <thead>
             <tr>
+                <th>ID</th>
                 <th>Code</th>
                 <th>Name</th>
                 <th>Date Of Cration</th>
@@ -32,14 +33,15 @@
             @foreach (var item in Model)
             {
                 <tr>
+                    <td>@item.Id</td>
                     <td>@item.Code</td>
                     <td>@item.Name</td>
                     <td>@item.CreateAt</td>
                     <td>
-                        <a asp-action="Details"class="btn btn-warning">Details</a>
+                        <a asp-action="Details"asp-route-id="@item.Id" class="btn btn-warning">Details</a>
                     </td>
                     <td>
-                        <a asp-action="Edit"class="btn btn-success">Update</a>
+                        <a asp-action="Edit"asp-route-id="@item.Id" class="btn btn-success">Update</a>
                     </td>
                     <td>
                         <a asp-action="Deleta"class="btn btn-danger">Delete</a>
