--- a/Company.G01.PL/Views/_ViewImports.cshtml
+++ b/Company.G01.PL/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Company.G01.PL
 @using Company.G01.PL.Models
 @using Company.G01.DAL.Models
-@using Company.G01.PL.Models
+@using Company.G01.PL.Dtos
+@using Company.G01.PL.Dtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
