--- a/Company.G01.PL/Views/Department/Index.cshtml
+++ b/Company.G01.PL/Views/Department/Index.cshtml
@@ -44,7 +44,7 @@
                         <a asp-action="Edit"asp-route-id="@item.Id" class="btn btn-success">Update</a>
                     </td>
                     <td>
-                        <a asp-action="Deleta"class="btn btn-danger">Delete</a>
+                        <a asp-action="Delete"asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
                     </td>
 
 
