--- a/Company.G01.PL/Views/Department/Delete.cshtml
+++ b/Company.G01.PL/Views/Department/Delete.cshtml
@@ -8,33 +8,8 @@
 <br />
 <form asp-action="Delete">
 <div >
-    <div class="my-3">
-        <label asp-for="Id" class="col-form-lable"></label>
-        <input asp-for="Id" class="form-control " readonly />
 
-
-    </div>
-    <div class="my-3">
-        <label asp-for="Code" class="col-form-lable"></label>
-        <input asp-for="Code" class="form-control " readonly />
-
-
-    </div>
-
-    <div class="my-3">
-        <label asp-for="Name" class="col-form-lable"></label>
-        <input asp-for="Name" class="form-control " readonly />
-
-
-    </div>
-
-    <div class="my-3">
-        <label asp-for="CreateAt" class="col-form-lable"></label>
-        <input asp-for="CreateAt" class="form-control " readonly />
-
-
-    </div>
-
+        <partial name="DepartmentPartialView/DeleteDetailsView.cshtml" />
     <div class="my-3">
       <input type="submit"value="Delete"class="btn btn-danger"></input>
         <a asp-action="Index" class="btn btn-light">Back</a>
