--- a/Company.G01.PL/Views/Department/Create.cshtml
+++ b/Company.G01.PL/Views/Department/Create.cshtml
@@ -38,3 +38,8 @@
 
 </form>
 
+*@*client side vaidation*@
+@section validation {
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
