--- a/Company.G01.PL/Views/Department/Edit.cshtml
+++ b/Company.G01.PL/Views/Department/Edit.cshtml
@@ -44,3 +44,9 @@
         <a asp-action="Index" class="btn btn-light">Back</a>
     </div>
 </form>
+
+*@*client side vaidation*@
+@section validation {
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
