--- a/Company.G01.PL/Views/Employee/Delete.cshtml
+++ b/Company.G01.PL/Views/Employee/Delete.cshtml
@@ -8,49 +8,7 @@
 <br />
 
 <form asp-action="Delete">
-    <div class="my-3">
-        <label asp-for="Name" class="col-form-lable"></label>
-        <input asp-for="Name" class="form-control " readonly />
-
-    </div> <div class="my-3">
-        <label asp-for="Age" class="col-form-lable"></label>
-        <input asp-for="Age" class="form-control " readonly />
-
-    </div> <div class="my-3">
-        <label asp-for="Email" class="col-form-lable"></label>
-        <input asp-for="Email" class="form-control " readonly />
-
-    </div> <div class="my-3">
-        <label asp-for="Address" class="col-form-lable"></label>
-        <input asp-for="Address" class="form-control " readonly />
-
-    </div> <div class="my-3">
-        <label asp-for="Phone" class="col-form-lable"></label>
-        <input asp-for="Phone" class="form-control " readonly />
-
-    </div> <div class="my-3">
-        <label asp-for="Salary" class="col-form-lable"></label>
-        <input asp-for="Salary" class="form-control " readonly />
-
-    </div> <div class="my-3">
-        <label asp-for="IsActive" class="col-form-lable"></label>
-        <input asp-for="IsActive" class="form-check  " disabled />
-
-    </div> <div class="my-3">
-        <label asp-for="IsDelete" class="col-form-lable"></label>
-        <input asp-for="IsDelete" class="form-check  " disabled />
-
-    </div>
-    <div class="my-3">
-        <label asp-for="HiringDate" class="col-form-lable"></label>
-        <input asp-for="HiringDate" class="form-control " readonly />
-
-    </div>
-    <div class="my-3">
-        <label asp-for="CreateAt" class="col-form-lable"></label>
-        <input asp-for="CreateAt" class="form-control " readonly />
-
-    </div>
+    <partial name="EmployeePartialView/DeleteDetailsView.cshtml" />
     <div class="my-3">
         <input type="submit"value="Delete"class="btn btn-primary"></input>
 
