--- a/Company.G01.PL/Views/Department/Create.cshtml
+++ b/Company.G01.PL/Views/Department/Create.cshtml
@@ -10,26 +10,7 @@
 <br />
 
 <form asp-action="Create">
-    <div class="my-3">
-        <label asp-for="Code"class="col-form-lable"></label>
-        <input asp-for="Code"class="form-control "/>
-        <span asp-validation-for="Code "class="text-danger"></span>
-        
-    </div>
-
-    <div class="my-3">
-        <label asp-for="Name" class="col-form-lable"></label>
-        <input asp-for="Name" class="form-control " />
-        <span asp-validation-for="Name" class="text-danger"></span>
-
-    </div>
-
-    <div class="my-3">
-        <label asp-for="CreateAt" class="col-form-lable"></label>
-        <input asp-for="CreateAt" class="form-control " />
-        <span asp-validation-for="CreateAt" class="text-danger"></span>
-
-    </div>
+    <partial name="DepartmentPartialView/CreateEditViewDepartment" />
 
    <div class="my-3">
         <input type="submit" value="Create"class="btn btn-primary" />
@@ -40,6 +21,8 @@
 
 *@*client side vaidation*@
 @section validation {
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+   @* <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>*@
+
+    <partial name="_ValidationScriptsPartial" />
 }
