--- a/Company.G01.PL/Views/Department/Edit.cshtml
+++ b/Company.G01.PL/Views/Department/Edit.cshtml
@@ -11,33 +11,8 @@
 
 <form asp-action="Edit">
 
-    <div class="my-3">
-        <label asp-for="Id" class="col-form-lable"></label>
-        <input asp-for="Id" class="form-control " />
-        <span asp-validation-for="Id " class="text-danger"></span>
+    <partial name="DepartmentPartialView/CreateEditViewDepartment" />
 
-    </div>
-
-    <div class="my-3">
-        <label asp-for="Code" class="col-form-lable"></label>
-        <input asp-for="Code" class="form-control " />
-        <span asp-validation-for="Code " class="text-danger"></span>
-
-    </div>
-
-    <div class="my-3">
-        <label asp-for="Name" class="col-form-lable"></label>
-        <input asp-for="Name" class="form-control " />
-        <span asp-validation-for="Name" class="text-danger"></span>
-
-    </div>
-
-    <div class="my-3">
-        <label asp-for="CreateAt" class="col-form-lable"></label>
-        <input asp-for="CreateAt" class="form-control " />
-        <span asp-validation-for="CreateAt" class="text-danger"></span>
-
-    </div>
 
     <div class="my-3">
         <input type="submit" value="save" class="btn btn-warning" />
@@ -47,6 +22,9 @@
 
 *@*client side vaidation*@
 @section validation {
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+   @* <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>*@
+
+    <partial name="_ValidationScriptsPartial" />
+
 }
