--- a/Company.G01.PL/Views/Department/Index.cshtml
+++ b/Company.G01.PL/Views/Department/Index.cshtml
@@ -4,6 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
+@if(!string.IsNullOrEmpty(TempData["Message"]as string))
+{
+    <div class="m-3 alert alert-danger">
+        <p>@TempData["Message"]</p>
+    </div>
+}
+
 <h1>All Department</h1>
 <br />
 <br />
