--- a/Company.G01.PL/Views/Employee/Create.cshtml
+++ b/Company.G01.PL/Views/Employee/Create.cshtml
@@ -18,6 +18,9 @@
 </form>
 *@*client side vaidation*@
 @section validation{
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    @*<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>*@
+
+    <partial name="_ValidationScriptsPartial" />
+
 }
