--- a/Company.G01.PL/Views/Employee/EmployeePartialView/_CreateEditView.cshtml
+++ b/Company.G01.PL/Views/Employee/EmployeePartialView/_CreateEditView.cshtml
@@ -1,4 +1,8 @@
-﻿@model CreateEmployeeDto
+﻿@model Employee
+
+@{
+    var Departments =new SelectList (ViewData["department"] as IEnumerable<Department>,"Id","Name");
+}
 <div class="my-3">
     <label asp-for="Name" class="col-form-lable"></label>
     <input asp-for="Name" class="form-control " />
@@ -57,5 +61,13 @@
     <label asp-for="CreateAt" class="col-form-lable"></label>
     <input asp-for="CreateAt" class="form-control " />
     <span asp-validation-for="CreateAt " class="text-danger"></span>
+
+</div>
+<div class="my-3">
+    <label asp-for="DepartmentId" class="col-form-lable"></label>
+    <select asp-for="DepartmentId" asp-items="Departments" class="form-control">
+        <option value="@null">--Select Department--</option>
+
+    </select>
 
 </div>
