Search And AutoMapper

--- a/Company.G01.PL/Views/Department/DepartmentPartialView/DeleteDetailsView.cshtml
+++ b/Company.G01.PL/Views/Department/DepartmentPartialView/DeleteDetailsView.cshtml
@@ -1,10 +1,11 @@
 ﻿@model Department
-<div class="my-3">
-    <label asp-for="Id" class="col-form-lable"></label>
-    <input asp-for="Id" class="form-control " readonly />
 
 
-</div>
+@* <div class="my-3"> *@ 
+@*     <label asp-for="Id" class="col-form-lable"></label> *@ 
+ @*     <input asp-for="Id" class="form-control " readonly /> *@ 
+
+ @* </div> *@
 <div class="my-3">
     <label asp-for="Code" class="col-form-lable"></label>
     <input asp-for="Code" class="form-control " readonly />
