--- a/Company.G01.PL/Views/Department/Index.cshtml
+++ b/Company.G01.PL/Views/Department/Index.cshtml
@@ -14,7 +14,16 @@
 <h1>All Department</h1>
 <br />
 <br />
-
+<div class="container m-4">
+    <div class="row justify-content-center">
+        <div class="col-6">
+            <input placeholder="Search" name="SearchInput" class="form-control" />
+        </div>
+        <div class="col-6">
+            <input type="submit" class="btn btn-success" value="Search" />
+        </div>
+    </div>
+</div>
 <a asp-action="Create"asp-controller="Department"class="btn btn-primary">Create Department</a>
 
 <br />
