--- a/Company.G01.PL/Views/Employee/EmployeePartialView/DeleteDetailsView.cshtml
+++ b/Company.G01.PL/Views/Employee/EmployeePartialView/DeleteDetailsView.cshtml
@@ -1,7 +1,8 @@
 ﻿@model Employee
-@{
-    var Departments = new SelectList(ViewData["department"] as IEnumerable<Department>,"Id","Name");
-}
+
+@* @{ *@
+@*     var Departments = new SelectList(ViewData["department"] as IEnumerable<Department>,"Id","Name"); *@
+@* } *@
 <div class="my-3">
     <label asp-for="Name" class="col-form-lable"></label>
     <input asp-for="Name" class="form-control " readonly />
@@ -54,9 +55,7 @@
 </div>
 
    <div class="my-3">
-       <label asp-for="DepartmentId"class="col-form-label"></label>
-    <select asp-for="DepartmentId" asp-items="Departments" class="form-control" disabled>
-        
-    </select>
+       <label asp-for="Department"class="col-form-label"></label>
+    <input asp-for="Department.Name"  class="form-control" disabled />
     
    </div>
