--- a/Company.G01.PL/Views/Department/DepartmentPartialView/CreateEditViewDepartment.cshtml
+++ b/Company.G01.PL/Views/Department/DepartmentPartialView/CreateEditViewDepartment.cshtml
@@ -1,11 +1,11 @@
-﻿@model Department
+﻿@model CreateDepartmentdto
 
-<div class="my-3">
-    <label asp-for="Id" class="col-form-lable"></label>
-    <input asp-for="Id" class="form-control " />
-    <span asp-validation-for="Id " class="text-danger"></span>
+@* <div class="my-3"> *@
+@*     <label asp-for="Id" class="col-form-lable"></label> *@
+@*     <input asp-for="Id" class="form-control " /> *@
+@*     <span asp-validation-for="Id " class="text-danger"></span> *@
 
-</div>
+@* </div> *@
 
 <div class="my-3">
     <label asp-for="Code" class="col-form-lable"></label>
