--- a/Company.G01.PL/Views/Department/Delete.cshtml
+++ b/Company.G01.PL/Views/Department/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Department
+﻿@model CreateDepartmentdto
 @{
     ViewData["Title"] = "Delete";
 }
@@ -11,7 +11,7 @@
 
         <partial name="DepartmentPartialView/DeleteDetailsView.cshtml" />
     <div class="my-3">
-      <input type="submit"value="Delete"class="btn btn-danger"></input>
+      <input type="submit"value="Delete"class="btn btn-danger"/>
         <a asp-action="Index" class="btn btn-light">Back</a>
     </div>
 </div>
