--- a/Company.G01.PL/Views/Employee/EmployeePartialView/DeleteDetailsView.cshtml
+++ b/Company.G01.PL/Views/Employee/EmployeePartialView/DeleteDetailsView.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee
+﻿@model CreateEmployeeDto
 
 @* @{ *@
 @*     var Departments = new SelectList(ViewData["department"] as IEnumerable<Department>,"Id","Name"); *@
