--- a/Company.G01.PL/Views/Employee/EDit.cshtml
+++ b/Company.G01.PL/Views/Employee/EDit.cshtml
@@ -8,10 +8,10 @@
 <br />
 <br />
 
-<form asp-action="Edit">
+<form asp-action="Edit"enctype="multipart/form-data">
 
      <partial name="EmployeePartialView/_CreateEditView.cshtml" /> 
-
+     <input asp-for="ImageName"hidden/>
    
 
     <div class="my-3"> 
