--- a/Company.G01.PL/Views/Employee/EmployeePartialView/_CreateEditView.cshtml
+++ b/Company.G01.PL/Views/Employee/EmployeePartialView/_CreateEditView.cshtml
@@ -4,9 +4,9 @@
     var Departments =new SelectList (ViewData["department"] as IEnumerable<Department>,"Id","Name");
 }
 <div class="my-3">
-    <label asp-for="EmpName" class="col-form-lable"></label>
-    <input asp-for="EmpName" class="form-control " />
-    <span asp-validation-for="EmpName " class="text-danger"></span>
+    <label asp-for="Name" class="col-form-lable"></label>
+    <input asp-for="Name" class="form-control " />
+    <span asp-validation-for="Name " class="text-danger"></span>
 
 </div>
 <div class="my-3">
@@ -71,3 +71,10 @@
     </select>
 
 </div>
+
+    <div class="my-3">
+    <label asp-for="Image" class="col-form-lable"></label>
+    <input asp-for="Image" class="form-control " />
+    
+
+</div
