--- a/Company.G01.PL/Views/Employee/Index.cshtml
+++ b/Company.G01.PL/Views/Employee/Index.cshtml
@@ -47,6 +47,7 @@
     <table class="table table-hover table-striped">
         <thead>
             <tr>
+                <th>Image</th>
                 <th>ID</th>
                 <th>Name</th>
                 <th>Age</th>
@@ -69,6 +70,9 @@
             @foreach (var item in Model)
             {
                 <tr>
+                    <td>
+                        <img src="~/fiels/image/@item.ImageName"class="img-fluid rounded-circle"/>
+                    </td>
                     <td>@item.Id</td>
                     <td>@item.Name</td>
                     <td>@item.Age</td>
