--- a/Company.G01.PL/Views/Employee/Create.cshtml
+++ b/Company.G01.PL/Views/Employee/Create.cshtml
@@ -10,8 +10,10 @@
 <form asp-action="Create" enctype="multipart/form-data">
 
     <partial name="EmployeePartialView/_CreateEditView.cshtml" />
+   
+
     <div class="my-3">
-        <input type="submit"value="Create"class="btn btn-primary"></input>
+        <input type="submit"value="Create"class="btn btn-primary"/>
         <a asp-action="Index"class="btn btn-danger">Back</a>
     </div>
 
