--- a/Company.G01.PL/Views/Employee/Delete.cshtml
+++ b/Company.G01.PL/Views/Employee/Delete.cshtml
@@ -11,7 +11,7 @@
     <partial name="EmployeePartialView/DeleteDetailsView.cshtml" />
      <input asp-for="ImageName" hidden /> 
     <div class="my-3">
-        <input type="submit"value="Delete"class="btn btn-primary"></input>
+        <input type="submit"value="Delete"class="btn btn-primary"/>
 
         <a asp-action="Index" class="btn btn-danger">Back</a>
     </div>
