--- a/Company.G01.PL/Views/Employee/EDit.cshtml
+++ b/Company.G01.PL/Views/Employee/EDit.cshtml
@@ -10,12 +10,12 @@
 
 <form asp-action="Edit"enctype="multipart/form-data">
 
-     <partial name="EmployeePartialView/_CreateEditView.cshtml" /> 
-     <input asp-for="ImageName"hidden/>
-   
+     <partial name="EmployeePartialView/_CreateEditView.cshtml" />
+    <input asp-for="ImageName" hidden />
+
 
     <div class="my-3"> 
-        <input type="submit" value="Save" class="btn btn-primary"></input> 
+        <input type="submit" value="Save" class="btn btn-primary"/>
         <a asp-action="Index" class="btn btn-danger">Back</a> 
     </div>
   
